--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     	<div id="header">
     		<img src="logo.png" id="logo" alt="aktek-logo"></img>
     		<nav id="links">
-    			<div class="nav-link">FUSION</div>
-    			<div class="nav-link">Services</div>
-    			<div class="nav-link">Contact</div>
+    			<div class="nav-link"><a href="#text-1">FUSION</a></div>
+    			<div class="nav-link"><a href="#video">Services</a></div>
+    			<div class="nav-link"><a href="#email">Contact</a></div>
     		</nav>
     	</div>
     	<div id="text-1">
@@ -19,13 +19,13 @@
     		<h4>Context analysis should be a thorough, collaborative effort that evolves with the situation on the ground. We provide tools designed to empower organizations and their staff, making context analysis as easy and as real-time as possible to maximize the odds of success.</h4>
     	</div>
     	<div id="video">
-    		<iframe width="560" height="315" src="https://www.youtube.com/embed/AkOLBdTrWfg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    		<iframe width="854" height="480" src="https://www.youtube.com/embed/AkOLBdTrWfg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     	</div>
  		<div id="form-box">
  		<form id="form">
- 			<p>How can we help you? Contact us.</p>
+ 			<h2>How can we help you? Contact us.</h2>
  			<input id="email" placeholder="Email"></input>
- 			<input id="submit" type="button" placeholder="Go!"></input>
+ 			<input id="submit" type="button" ></input>
  		</form>
  		</div>
  		<div class="container">
